--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,23 @@
+.app{
+    width: 100%;
+    background-color: rgb(0, 0, 0);
+    height: 180px;
+    color: white;
+    font-size: 100px;
+    text-align: center;
+    padding-top: 15px;
+}
 
-/* 
+.counter{
+    width: 100px;
+    margin-left: 10px;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.box{
+    height: 150px;
+    background-color: #0e0e0e;
+}
 
-*/
+.icon{
+    width: 140px;
+}
